// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`issueGetRuntime — identifier vs UUID resolution > Test 1: UUID input routes to client.issue(uuid) exactly once > uuid-success 1`] = `
{
  "data": {
    "assignee": {
      "email": "alice@example.com",
    },
    "id": "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
    "identifier": "ENG-1",
    "priority": 0,
    "state": {
      "name": "In Progress",
    },
    "team": {
      "key": "ENG",
    },
    "title": "first",
    "updatedAt": "2026-01-01T00:00:00Z",
  },
  "meta": {
    "workspace": "acme",
    "workspaceSource": "active",
  },
}
`;

exports[`issueGetRuntime — identifier vs UUID resolution > Test 5: identifier with empty result throws ISSUE_NOT_FOUND with details.ref > failure-ISSUE_NOT_FOUND-identifier 1`] = `
{
  "$apiVersion": "1",
  "error": {
    "code": "ISSUE_NOT_FOUND",
    "details": {
      "ref": "ENG-999",
    },
    "message": "issue not found: ENG-999",
    "transient": false,
  },
  "meta": {
    "command": "issue get",
  },
  "ok": false,
}
`;

exports[`issueGetRuntime — projection + hydration > Test 8: --fields=full returns the issue passthrough > full-passthrough 1`] = `
{
  "data": {
    "description": null,
    "id": "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",
    "identifier": "ENG-1",
    "priority": 2,
    "title": "full",
    "updatedAt": "2026-01-01T00:00:00Z",
    "url": "https://linear.app/acme/issue/ENG-1",
  },
  "meta": {
    "workspace": "acme",
    "workspaceSource": "active",
  },
}
`;
